# Offender

./: CONTRIBUTING.md  DOCS.md  README.md  TODOS.md  pyproject.toml
examples/: offset_config.py  offset_extractor.py  offset_finder.py
offender/: exceptions.py
offender/offset/: offset.py  offset_config.py  offset_extractor.py
offender/offset_finder/: offset_database.py  offset_finder.py
offender/searcher/: cachable_searcher.py  elftools_searcher.py  linux_searcher.py  r2searcher.py  searcher.py  searcher_config.py  searcher_selector.py
offender/utils/: basic_offset_modifications.py  import_utils.py  offset_factory.py
resources/: __init__.py
test/: conftest.py  test_config.py  test_extractor.py
test/searchers/: benchmark.py  conftest.py
test/searchers/elftools_searcher/: test_elftools_searcher.py
test/searchers/linux_searcher/: test_linux_searcher.py
test/searchers/r2_searcher/: test_r2searcher.py
